--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>delivey form</title>
-	<link rel="stylesheet" href="style.css#FFFFFFFF">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
 	<form id="form">
@@ -11,6 +11,6 @@
 	</form> 
 
 
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="controller.js"></script>
 </body>
 </html>
