--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	</form> 
 
 
-	<script type="text/javascript" src="controller.js"></script>
+	<script type="module" src="model.js"></script>
+  	<script type="module" src="view.js"></script>
+  	<script type="module" src="controller.js"></script>
 </body>
 </html>
