--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>delivey form</title>
-	<link rel="stylesheet" href="style.css#FFFFFFFF">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body id="body">
 	<form id="form">
@@ -11,12 +11,6 @@
 	</form> 
 
 
-<<<<<<< HEAD
-	<script type="module" src="model.js"></script>
-  	<script type="module" src="view.js"></script>
-  	<script type="module" src="controller.js"></script>
-=======
-	<script type="text/javascript" src="script.js"></script>
->>>>>>> parent of fba7bf2... Update index.html
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
