--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	</form> 
 
 
-<script type="text/javascript" src="script.js"></script>
+<script src="model.js"></script>
+<script src="view.js"></script>
+<script src="controller.js"></script>
+
+
 </body>
 </html>
